--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Party Suff",
+  "name": "mobile-party-time",
   "version": "0.0.1",
   "description": "Tesing suff",
   "dependencies": {
