--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tesing suff",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.1.3"
+    "socket.io": "1.7.4"
   },
   "scripts": {
     "start": "node index.js"
